corrected spacing of scorecard

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,8 +59,8 @@ color: #000;
 #winsLossesAlertBox {
     width: 215px;
     height: 215px;
-    margin: 4% 0 0 39%;
-    padding-top: 7%;
+    margin: 3% 0 0 39%;
+    padding-top: 5%;
     padding-left: 10px;
     background-color: #038dee;
     color: #000;
